--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ nav {
     text-align: center;
     z-index: 1;
     background-color: white;
-    border-top-style: solid;
+    border-bottom-style: solid;
     border-width: 2px;
     border-color: black;
 }
